<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharityDonationActivity">

    <TextView
        android:id="@+id/donation_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/omiseBlue"
        android:textSize="18dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/donate"/>

    <TextView
        android:id="@+id/charity_donation_name"
        android:layout_below="@id/donation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/charity_donation_name"/>

    <ImageView
        android:id="@+id/charity_donation_logo"
        android:layout_below="@id/charity_donation_name"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/credit_card_info_button"
        android:layout_below="@id/charity_donation_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginRight="10dp"
        android:textSize="14dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/add_cb_infos"
        android:textAllCaps="false"
        android:onClick="go_to_credit_card_form"/>

    <TextView
        android:id="@+id/donation_amount_label"
        android:layout_below="@id/credit_card_info_button"
        android:layout_marginLeft="10dp"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:textSize="16dp"
        android:text="@string/amount"
        android:maxLength="22"/>

    <EditText
        android:id="@+id/donation_amount_form"
        android:layout_below="@id/credit_card_info_button"
        android:layout_toRightOf="@id/donation_amount_label"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:inputType="number"

        />

    <Button
        android:id="@+id/submit_donation_button"
        android:layout_below="@id/donation_amount_label"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="50dp"
        android:background="@color/omiseBlue"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/submit_donation"
        android:onClick="go_to_transaction_status_screen"/>

</RelativeLayout>